# portfolio__ml_claims_process

./: .gitignore  README.md  config.yaml  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
notebooks/: 01_eda.ipynb  02_classification.ipynb  03_fraud_detection.ipynb  04_process_analytics.ipynb  05_temporal_validation.ipynb
reports/: make_figures.py
src/claims/: __init__.py  config.py  data.py  evaluation.py  features.py
src/claims/classification/: __init__.py  calibration.py  models.py  tuning.py
src/claims/fraud/: __init__.py  anomaly.py  supervised.py
src/claims/process/: __init__.py  decisions.py  reserving.py  severity.py
tests/: test_core.py
