[project]
name = "ml-analysis-claims"
version = "0.1.0"
description = "End-to-end ML pipeline for motor vehicle claims: classification, fraud detection, and process analytics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scikit-learn>=1.6",
    "catboost>=1.2.7",
    "shap>=0.46",
    "mlflow>=2.20",
    "pandas>=2.2",
    "numpy>=2.0",
    "matplotlib>=3.9",
    "seaborn>=0.13.2",
    "plotly>=5.24",
    "imbalanced-learn>=0.12",
    "jupyter>=1.1",
    "ipykernel>=6.29",
    "scipy>=1.13",
    "nbformat>=5.10",
    "numba>=0.59.1",
    "betacal>=1.1.0",
    "venn-abers>=1.5.0",
    "mapie>=1.3.0",
    "optuna>=4.7.0",
    "streamlit>=1.55.0",
    "watchdog>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claims"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "pytest>=8.2",
    "pre-commit>=4.0",
]
